--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -12,5 +12,8 @@
 <body>
 <h1 th:text="${msg}">MSG</h1>
 <h2 th:text="${time}">Time</h2>
+<footer>
+    <span style="font-size: 24px; font-weight: bold;">v1</span>
+</footer>
 </body>
 </html>
